# pymus

./: .gitignore  LICENSE  Makefile  README.md  player.py  pyproject.toml
src/pymus/: cli.py
